# cmake_sumo_libtraci

./: CMakeLists.txt  README.md  main.cp
example/: test.sumocfg  testballistic.sumocfg  vehroutes.xml
